--- a/bin/install
+++ b/bin/install
@@ -35,8 +35,9 @@ install_tool() {
   echo "Copying binary: from ${download_path} to ${binary_path}"
   # cp "$(get_binary_path_in_archive "${tmp_download_dir}" "${binary_name}" "${version}" "${platform}")" "${binary_path}"
   ls -alFrt ${download_path}
-  cp "${download_path} ${binary_path}"
-
+  echo cp ${download_path} ${binary_path}
+  ls -alFrt ${download_path}
+  cp ${download_path} ${binary_path}
   chmod +x "${binary_path}"
 }
 
